Version: $Id$ $Name$

purple (11/04/06)
-----------------
+ Updated version to 5.6.1
+ Fixed con range. Stupid double ++ error.
+ Redid gradients for red con colors
+ Cleaned up the hover-mode death handling by making movements valid, changing
	icon to a corpse, and made handling the respawn not cause unknowns
+ Added a hack for kernel versions after 2.6.18 that moved UTS_RELEASE
+ Fixed auras so they shouldn't show up unknown as much. New auras for people
	who are not in your group will still show as unknown, since the server
	doesn't announce them until you join the group.

purple (9/30/06)
----------------
+ Updated version to 5.6
+ Serpent Spine compatibility
+ Upped max level to 75 (showeq42)
+ Realigned structs (showeq42)
+ New variable length movement op (showeq42)
+ Updated yellow con range to 3 levels (showeq42)
+ Updated cons to be consistent with in game (showeq42)
+ Cleaned up showeq42's patch. Thanks to ksmith for help on the 
	positioning packet cleanup.
+ Regenerated staticspells.h 
+ Updated zones.h
+ Updated races.h
+ Named some weapon materials (uRit1u2CBBa)

purple (6/17/06)
----------------
+ Updated version to 5.5
+ Updated most of the rest of the opcodes
+ Updated a little more of spawnStruct

purple (6/15/06)
----------------
+ Updated version to 5.5.0.0-pre1
+ Updated necessary opcodes for map, zoning, spawn list
+ Updated structs for live compatibility (NewZone, movement, spawnStruct)

purple (4/6/06)
---------------
+ Fixed opcodes for OP_TargetMouse, OP_LevelUpdate (thanks ieatacid)
+ Fixed gcc 4 compiliation issue in SpawnMonitor

purple (4/19/06)
----------------
+ Updated version to 5.4.0.0
+ Fixed opcodes for 4/19 live patch

purple (3/1/06)
---------------
+ Updated version to 5.3.1.0
+ Wired up new larger OP_Action to SpellShell so buffs cast by you are seen
+ Fixed light and gm in spawnStruct

purple (2/23/06)
----------------
+ Updated version to 5.3.0.0
+ Updated most opcodes for 2/21 live
+ Updated position structs for 2/21 live